[gd_scene load_steps=12 format=3 uid="uid://cyseefdx12w0l"]

[ext_resource type="Script" path="res://quest/quest_display/quest_display.gd" id="1_t31qd"]
[ext_resource type="Texture2D" uid="uid://hlxp4xrdktr5" path="res://assets/sprites/post_it.png" id="2_gqk57"]
[ext_resource type="PackedScene" uid="uid://dton4hbxdwmqg" path="res://components/drag_area/drag_area.tscn" id="3_gkgat"]
[ext_resource type="Theme" uid="uid://cxo3ge4duc5lx" path="res://theme/theme.tres" id="4_47ywi"]
[ext_resource type="Texture2D" uid="uid://xch8ub2eqydp" path="res://assets/sprites/red_cross.png" id="5_notoc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf77y"]
size = Vector2(226, 42)

[sub_resource type="Animation" id="Animation_u3kq8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarkDoneSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_off2m"]
resource_name = "mark_done"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarkDoneSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hxn6j"]
resource_name = "pop_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_msy80"]
resource_name = "pop_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_to7ww"]
_data = {
"RESET": SubResource("Animation_u3kq8"),
"mark_done": SubResource("Animation_off2m"),
"pop_in": SubResource("Animation_hxn6j"),
"pop_out": SubResource("Animation_msy80")
}

[node name="QuestDisplay" type="Node2D"]
z_index = 1
script = ExtResource("1_t31qd")

[node name="DragArea" parent="." node_paths=PackedStringArray("dragged_node") instance=ExtResource("3_gkgat")]
unique_name_in_owner = true
dragged_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragArea"]
position = Vector2(7, -85)
shape = SubResource("RectangleShape2D_cf77y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gqk57")

[node name="QuestLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -60.0
offset_top = -89.0
offset_right = 74.0
offset_bottom = -66.0
theme = ExtResource("4_47ywi")
text = "Achieve 10 pushs"
horizontal_alignment = 1
autowrap_mode = 2

[node name="QuestProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
offset_left = -72.0
offset_top = 40.0
offset_right = 61.0
offset_bottom = 50.0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_to7ww")
}

[node name="MarkDoneSprite" type="Sprite2D" parent="."]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_notoc")
